--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="jg.ico" />
+    <link rel="icon" href="logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Bem Vindo ao AstroCurious"
       content="Web site created using create-react-app"
     />
-    <title>AstroCurious</title>
+    <title>CosmosExplorer</title>
   </head>
   <body>
     <noscript>Você precisa habilitar o Javascript para rodar este aplicativo.</noscript>
